--- a/src/main/resources/public/app/views/main.html
+++ b/src/main/resources/public/app/views/main.html
@@ -7,15 +7,16 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5">
-            <a href ="MHS_MAC.zip"><h2 class="text-center"><i class="fa fa-apple fa-5x"></i></h2></a>
+            <a href ="https://drive.google.com/uc?export=download&id=0B2FRfMTFpkH0UmZqeEd2VWk5ZjQ"><h2 class="text-center"><i class="fa fa-apple fa-5x"></i></h2></a>
             <h3 class="text-center">Mac OS X - Yosemite</h3>
         </div>
         <div class="col-md-2"></div>
         <div class="text-center col-md-5">
-            <a href="MHS_Win64.zip"><h2 class="text-center"><i class="fa fa-windows fa-5x"></i></h2></a>
+            <a href="https://drive.google.com/uc?export=download&id=0B2FRfMTFpkH0V09BaU5kQm1RZ3c"><h2 class="text-center"><i class="fa fa-windows fa-5x"></i></h2></a>
             <h3 class="text-center">Windows 7</h3>
-            <a class="text-center" href="MHS_Win32.zip">32-bit</a><br/>
-            <a class="text-center" href="MHS_Win64.zip">64-bit</a>
+            <a class="text-center" href="https://drive.google.com/uc?export=download&id=0B2FRfMTFpkH0aVVscVhsU1lsczQ">32-bit</a><br/>
+            <a class="text-center" href="https://drive.google.com/uc?export=download&id=0B2FRfMTFpkH0V09BaU5kQm1RZ3c">64-bit</a>
+            
         </div>
     </div>
 </div>
